# EdgeVisionApp

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/edgevisionapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  native-lib.cpp
app/src/main/java/com/example/edgevisionapp/: MainActivity.java
app/src/main/java/com/example/edgevisionapp/gl/: GLRenderer.java  GLView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgevisionapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
